tests/rosetta/transpiler/Zig/DNS-query.error
zig build: exit status 1
/tmp/DNS-query.zig:5:16: error: function parameter shadows declaration of 'err'
/tmp/DNS-query.zig:11:1: note: declared here
/tmp/DNS-query.zig:14:13: error: cannot compare strings with ==
