tests/rosetta/transpiler/Zig/DNS-query.zig
// Generated by Mochi compiler v0.10.30 on 2025-07-19T00:26:04Z
const std = @import("std");
const net = @import("net");

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

const res: []const i32 = net.LookupHost("www.kame.net"); // []const i32
const addrs: i32 = res[0]; // i32
const err: i32 = res[1]; // i32

pub fn main() void {
    if (err == "nil") {
        std.debug.print("{s}\n", .{std.fmt.allocPrint(std.heap.page_allocator, "{any}", .{addrs}) catch |err| handleError(err)});
    } else {
        std.debug.print("{any}\n", .{err});
    }
}
